--- a/.github/workflows/update-schedules.yml
+++ b/.github/workflows/update-schedules.yml
@@ -5,6 +5,9 @@ on:
     - cron: '0 6 * * *'  # Daily at 6 AM
   workflow_dispatch:  # Manual trigger
 
+permissions:
+  contents: write # Allow the action to push changes
+
 jobs:
   update-schedules:
     runs-on: ubuntu-latest
