--- a/.github/workflows/update-schedules.yml
+++ b/.github/workflows/update-schedules.yml
@@ -28,6 +28,6 @@ jobs:
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
-        git add *.ics
+        git add *.ics index.html
         git diff --staged --quiet || git commit -m "Update team schedules $(date)"
         git push
