--- a/.github/workflows/update-schedules.yml
+++ b/.github/workflows/update-schedules.yml
@@ -4,7 +4,9 @@ on:
   schedule:
     - cron: '0 6 * * *'  # Daily at 6 AM
   workflow_dispatch:  # Manual trigger
-
+  push:
+    branches: [ main ]
+    
 permissions:
   contents: write # Allow the action to push changes
 
